[package]
name = "arweave-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.64"
async-recursion = "0.3.2"
async-stream = "0.3.2"
async-trait = "0.1.57"
avro-rs = "0.13.0"
base64 = "0.13.0"
bytes = "1.1.0"
data-encoding = "2.3.2"
futures = "0.3.24"
jsonwebkey = { version = "0.3.4", features = [ "pkcs-convert" ] }
lazy_static = "1.4.0"
pretend = "0.3.0"
pretend-reqwest = "0.3.0"
rand = "0.8.5"
ring = "0.16.20"
rsa = "0.6.1"
serde = { version = "1.0.144", features = ["derive"]}
serde_json = { version = "1.0.85" }
sha2 = "0.10.5"
thiserror = "1.0.34"

[dev-dependencies]
tokio-test = "0.4.2"
httpmock = "0.6"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]
